--- a/css/stiles.css
+++ b/css/stiles.css
@@ -663,3 +663,38 @@ height: 92px;
         border-color: #2196F3;
         background-color: #2196F3;
     }
+    .backdrop {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0px;
+        top: 0px;
+        background: rgba(0, 0, 0, 0.2);
+    }
+    .modal {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 528px;
+        height: 581px;
+        background-color: var(--background-color);
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+    }
+
+    .modal-button {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        left: 1026px;
+        top: 229px;
+        color: var(--color-3);
+        background: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        box-sizing: border-box;
+    }
+    .backdrop.is-hidden{
+        opacity: 0;
+        pointer-events: none;
+    }
