--- a/css/stiles.css
+++ b/css/stiles.css
@@ -191,6 +191,7 @@ padding: 0;
     text-decoration: none;  
     display: list-item;
     text-align: -webkit-match-parent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .studio:hover, .studio:focus {
@@ -212,6 +213,7 @@ padding: 0;
     padding: 6px 22px;
     cursor: pointer;
     margin-left: 0px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cards {
     padding: 20px 24px;
@@ -250,6 +252,7 @@ padding: 0;
     display: block;
     list-style: none;
     text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .webproject:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -266,7 +269,9 @@ font-weight: 500;
 font-size: 14px;
 line-height: 24px;
 text-decoration: none;
-align-items: center;}
+align-items: center;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .mail:hover,.mail:focus {
     color: var(--color-1);    
@@ -282,6 +287,7 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--color-3);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover, .link:focus{
@@ -302,6 +308,7 @@ height: 100%;
 display: flex;
 align-items: center;
 justify-content: center;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:focus, .social-link:hover {
     fill: var(--background-color);
@@ -317,6 +324,7 @@ justify-content: center;
 }
 li .item-icon svg{
     fill: var(--icon-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover svg{
     fill: var(--background-color);
@@ -335,11 +343,12 @@ border-radius: 4px;
 letter-spacing: 0.06em;
 border: none;
 padding: 10px 32px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button1:hover, .button1:focus{
     color: var(--color-2);
-    background: var(--color-1);
+    background-color: var(--color-1);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
 
@@ -354,6 +363,7 @@ border: none;
 padding: 6px 22px;
 cursor: pointer;
 margin-left: 8px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .visually-hidden {
@@ -431,6 +441,7 @@ margin-bottom: 30px;
     font-style: normal;
     color: var(--color-2);
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress:hover, .address:focus {
     color: var(--color-1);  
@@ -443,6 +454,7 @@ margin-bottom: 30px;
     font-size: 14px;
     line-height: 24px;
     text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .mail2:hover,.mail2:focus {
@@ -588,14 +600,13 @@ svg {
         width: 170px;
 height: 92px;
     
-    align-items: center;justify-content: center;}
+    align-items: center;
+    justify-content: center;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
     .clients .link:hover{
         fill: var(--color-1);
         border: 1px solid var(--color-1);
-    }
-
-    .client {
-
     }
 
     .footer .social {
@@ -650,6 +661,7 @@ height: 92px;
             }
     .footer-icon {
         fill: var(--background-color);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .footer-icon:hover {
         fill: var(--background-color);
@@ -687,8 +699,7 @@ height: 92px;
         position: absolute;
         width: 30px;
         height: 30px;
-        left: 1026px;
-        top: 229px;
+        top: 20px;
         color: var(--color-3);
         background: #FFFFFF;
         border: 1px solid rgba(0, 0, 0, 0.1);
