--- a/css/stiles.css
+++ b/css/stiles.css
@@ -65,6 +65,7 @@ display: flex;
         border-bottom: 1px solid #ececec;
 }
 .navigation1 {
+    position: relative;
     margin-left: 0px;
         padding-top: 32px;
         padding-bottom: 32px;
@@ -699,13 +700,71 @@ height: 92px;
         position: absolute;
         width: 30px;
         height: 30px;
-        top: 20px;
+        top: 8px;
+        right: 8px;
         color: var(--color-3);
         background: #FFFFFF;
         border: 1px solid rgba(0, 0, 0, 0.1);
         box-sizing: border-box;
+        border-radius: 50%;
     }
     .backdrop.is-hidden{
         opacity: 0;
         pointer-events: none;
     }
+    .action-image{
+        position: relative;
+    }
+    .action {
+        position: absolute;
+        width: 370px;
+        height: 70px;
+        top: 1433px;
+        background:#2F303ACC;
+        pointer-events: none;
+    }
+    .action-text{
+        padding-top: 27px;
+        font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+    }
+    .action-image2{
+        position: relative;
+    }
+    .action2 {
+        position: absolute;
+        width: 370px;
+        height: 70px;
+        top: 1433px;
+        background:#2F303ACC;
+        pointer-events: none;
+    }
+    .action-image3{
+        position: relative;
+    }
+    .action3 {
+        position: absolute;
+        width: 370px;
+        height: 70px;
+        top: 1433px;
+        background:#2F303ACC;
+        pointer-events: none;
+    }
+    .navigation1::after{
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--color-1);
+        border-radius: 2px;
+    }
+    
