--- a/css/stiles.css
+++ b/css/stiles.css
@@ -65,7 +65,6 @@ display: flex;
         border-bottom: 1px solid #ececec;
 }
 .navigation1 {
-    position: relative;
     margin-left: 0px;
         padding-top: 32px;
         padding-bottom: 32px;
@@ -201,6 +200,7 @@ padding: 0;
 
 .current {
     color: var(--color-1);
+    position: relative;
 }
 
 .button-current {
@@ -756,8 +756,9 @@ color: #FFFFFF;
         background:#2F303ACC;
         pointer-events: none;
     }
-    .navigation1::after{
+    .current::after{
         position: absolute;
+        top: 44px;
         left: 0;
         bottom: 0;
         content: "";
@@ -766,5 +767,46 @@ color: #FFFFFF;
         height: 4px;
         background-color: var(--color-1);
         border-radius: 2px;
+    }
+    .paragraf{
+        position: relative;
+    }
+    .paragraf-text{
+        position: absolute;
+        height: 100%;
+        bottom: 0;
+        font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+letter-spacing: 0.03em;
+
+color: #FFFFFF;
+background: rgba(33, 150, 243, 0.9);
+opacity: 0;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .paragraf-text:hover{
+        opacity: 1;
+
+    }
+    .paragraf1{
+        position: relative;
+    }
+    .paragraf-text1{
+        position: absolute;
+        height: 100%;
+        bottom: 0;
+        font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+letter-spacing: 0.03em;
+
+color: #FFFFFF;
+background: rgba(33, 150, 243, 0.9);
+opacity: 0;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .paragraf-text1:hover{
+        opacity: 1;
     }
     
