--- a/css/stiles.css
+++ b/css/stiles.css
@@ -656,13 +656,14 @@ height: 92px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .client {
         fill: var(--icon-color)
             }
     .footer-icon {
         fill: var(--background-color);
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
     }
     .footer-icon:hover {
         fill: var(--background-color);
@@ -773,40 +774,21 @@ color: #FFFFFF;
     }
     .paragraf-text{
         position: absolute;
-        height: 100%;
-        bottom: 0;
+        height: 0;
+        bottom: 0; 
+        padding: 63px 24px;
         font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-letter-spacing: 0.03em;
-
-color: #FFFFFF;
-background: rgba(33, 150, 243, 0.9);
-opacity: 0;
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 0.03em;
+        opacity: 0;
+        color: #FFFFFF;
+        background: rgba(33, 150, 243, 0.9);
+        transition: height 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .paragraf-text:hover{
-        opacity: 1;
-
-    }
-    .paragraf1{
-        position: relative;
-    }
-    .paragraf-text1{
-        position: absolute;
+    .webproject:hover .paragraf-text {
         height: 100%;
-        bottom: 0;
-        font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-letter-spacing: 0.03em;
-
-color: #FFFFFF;
-background: rgba(33, 150, 243, 0.9);
-opacity: 0;
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .paragraf-text1:hover{
         opacity: 1;
     }
+    
     
