--- a/css/stiles.css
+++ b/css/stiles.css
@@ -684,6 +684,7 @@ height: 92px;
         left: 0px;
         top: 0px;
         background: rgba(0, 0, 0, 0.2);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .modal {
         position: absolute;
@@ -770,25 +771,30 @@ color: #FFFFFF;
         border-radius: 2px;
     }
     .paragraf{
+        overflow: hidden;
         position: relative;
     }
     .paragraf-text{
         position: absolute;
-        height: 0;
-        bottom: 0; 
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0; 
         padding: 63px 24px;
         font-weight: 400;
         font-size: 18px;
         line-height: 28px;
         letter-spacing: 0.03em;
-        opacity: 0;
         color: #FFFFFF;
         background: rgba(33, 150, 243, 0.9);
-        transition: height 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
     }
     .webproject:hover .paragraf-text {
-        height: 100%;
-        opacity: 1;
+        transform: translateY(0);
+    }
+    .webproject:focus .paragraf-text {
+        transform: translateY(0);
     }
     
     
