--- a/css/stiles.css
+++ b/css/stiles.css
@@ -23,13 +23,15 @@ ul {
 img {
     display: block;
     max-width: 100%;
-    margin: 0px;
+    height: auto;
+}
+.img:not(:last-child){
+    margin-right: 30px;
 }
 .imgss {
     padding: 0px;
     display: flex;
     margin-top: 50px;
-    margin-right: -30px;
 }
 h1, h2, h3, p {
     list-style: none;
@@ -75,6 +77,7 @@ display: flex;
     flex-wrap: wrap;
 }
 .img {
+    position: relative;
     display: block;
     flex-basis: calc(100% - 90px / 3)
 }
@@ -303,6 +306,9 @@ li .item-icon{
     width: 44px;
     height: 44px;
 }
+li .item-icon:not(:last-child){
+    margin-right: 10px;
+}
 .social-link {
 width: 100%;
 height: 100%;
@@ -363,8 +369,10 @@ border-radius: 4px;
 border: none;
 padding: 6px 22px;
 cursor: pointer;
-margin-left: 8px;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.item{
+    margin-left: 8px;
 }
 
 .visually-hidden {
@@ -455,7 +463,7 @@ margin-bottom: 30px;
     font-size: 14px;
     line-height: 24px;
     text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
     .mail2:hover,.mail2:focus {
@@ -659,7 +667,8 @@ height: 92px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .client {
-        fill: var(--icon-color)
+        fill: var(--icon-color);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             }
     .footer-icon {
         fill: var(--background-color);
@@ -699,6 +708,7 @@ height: 92px;
     }
 
     .modal-button {
+        cursor: pointer;
         position: absolute;
         width: 30px;
         height: 30px;
@@ -714,55 +724,32 @@ height: 92px;
         opacity: 0;
         pointer-events: none;
     }
-    .action-image{
-        position: relative;
-    }
+
     .action {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         position: absolute;
-        width: 370px;
+        width: 100%;
         height: 70px;
-        top: 1433px;
         background:#2F303ACC;
         pointer-events: none;
+        bottom: 0;
+        left: 0;
     }
     .action-text{
-        padding-top: 27px;
         font-weight: 700;
 font-size: 14px;
 line-height: 16px;
-text-align: center;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 
 color: #FFFFFF;
     }
-    .action-image2{
-        position: relative;
-    }
-    .action2 {
+.current::after{
         position: absolute;
-        width: 370px;
-        height: 70px;
-        top: 1433px;
-        background:#2F303ACC;
-        pointer-events: none;
-    }
-    .action-image3{
-        position: relative;
-    }
-    .action3 {
-        position: absolute;
-        width: 370px;
-        height: 70px;
-        top: 1433px;
-        background:#2F303ACC;
-        pointer-events: none;
-    }
-    .current::after{
-        position: absolute;
-        top: 44px;
+        top: 45px;
         left: 0;
-        bottom: 0;
         content: "";
         display: block;
         width: 100%;
